--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "serverless-env-generator",
-  "version": "0.0.0",
-  "description": "Generate serverless.env.yml for dynamic ENV assignments within serverless.yml",
+  "name": "@packt/serverless-env-generator",
+  "version": "0.0.1",
+  "description":
+    "Generate serverless.env.yml for dynamic ENV assignments within serverless.yml",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@bitbucket.org/packt-internal/serverless-env-generator.git"
+    "url":
+      "git+ssh://git@bitbucket.org/packt-internal/serverless-env-generator.git"
   },
   "author": "Packt Publishing Ltd <https://www.packtpub.com>",
   "license": "Apache-2.0",
-  "homepage": "https://bitbucket.org/packt-internal/serverless-env-generator#readme",
+  "homepage":
+    "https://bitbucket.org/packt-internal/serverless-env-generator#readme",
   "dependencies": {
     "commander": "^2.15.1",
     "yamljs": "^0.3.0"
