Run deploy only on tag releases

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,5 +62,4 @@ workflows:
             tags:
               only: /.*/
             branches:
-              only:
-                - master
+              ignore: /.*/
