--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "@packt/serverless-env-generator",
   "version": "0.0.2",
-  "description":
-    "Generate serverless.env.yml for dynamic ENV assignments within serverless.yml",
+  "description": "Generate serverless.env.yml for dynamic ENV assignments within serverless.yml",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url":
-      "git+ssh://git@bitbucket.org/packt-internal/serverless-env-generator.git"
+    "url": "git+ssh://git@bitbucket.org/packt-internal/serverless-env-generator.git"
   },
   "author": {
     "name": "Packt Publishing Ltd",
@@ -23,8 +21,7 @@
     }
   ],
   "license": "Apache-2.0",
-  "homepage":
-    "https://bitbucket.org/packt-internal/serverless-env-generator#readme",
+  "homepage": "https://bitbucket.org/packt-internal/serverless-env-generator#readme",
   "dependencies": {
     "commander": "^2.15.1",
     "dotenv": "^5.0.1",
@@ -32,5 +29,9 @@
   },
   "bin": {
     "serverless-env-generator": "index.js"
+  },
+  "devDependencies": {
+    "debug": "4.1.1",
+    "fs-extra": "8.1.0"
   }
 }
