--- a/package.json
+++ b/package.json
@@ -25,13 +25,11 @@
   "dependencies": {
     "commander": "^2.15.1",
     "dotenv": "^5.0.1",
-    "yamljs": "^0.3.0"
+    "yamljs": "^0.3.0",
+    "debug": "4.1.1",
+    "fs-extra": "8.1.0"
   },
   "bin": {
     "serverless-env-generator": "index.js"
-  },
-  "devDependencies": {
-    "debug": "4.1.1",
-    "fs-extra": "8.1.0"
   }
 }
